--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,32 @@
--r requirements/staging.txt
+appdirs==1.4.3
+arrow==0.7.0
+beautifulsoup4==4.4.1
+configparser==3.5.0
+disqus==0.0.4
+Django==1.8.9
+django-debug-toolbar==1.7
+django-disqus==0.5
+django-emoticons==1.1.2
+django-forms-bootstrap==3.0.1
+django-paypal==0.2.7
+django-tinymce==2.2.0
+djangorestframework==3.3.0
+enum34==1.1.6
+flake8==3.3.0
+funcsigs==1.0.2
+gunicorn==19.4.0
+mccabe==0.6.1
+mock==2.0.0
+packaging==16.8
+pbr==2.1.0
+Pillow==3.1.1
+pycodestyle==2.3.1
+pyflakes==1.5.0
+pyparsing==2.2.0
+python-dateutil==2.4.2
+requests==2.13.0
+reusable-blog-app==1.0.0
+six==1.10.0
+sqlparse==0.2.3
+stripe==1.53.0
+whitenoise==3.2
