--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ django-debug-toolbar==1.7
 django-disqus==0.5
 django-emoticons==1.1.2
 django-forms-bootstrap==3.0.1
-django-paypal==0.2.7
+django-paypal==0.3.3
 django-tinymce==2.2.0
 djangorestframework==3.3.0
 enum34==1.1.6
@@ -24,6 +24,7 @@ pycodestyle==2.3.1
 pyflakes==1.5.0
 pyparsing==2.2.0
 python-dateutil==2.4.2
+pytz==2017.2
 requests==2.13.0
 six==1.10.0
 sqlparse==0.2.3
